--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
       <p>Click the play button to view this classic dance sequence. To see the dance as it appeared on the movie set,
         go to the start of the clip and click &#8635; to rotate and play the video. Click &#9995; to pause the rotation
-        and the playbac</p>
+        and the playback</p>
       <input type="checkbox" id="rotateVideo" />
       <label for="rotateVideo"></label>
       <video controls poster="cp_photo2.png">
